--- a/html/nft__final.html
+++ b/html/nft__final.html
@@ -1,108 +1,117 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NFT</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>NFT</title>
+    <meta name="description" content="Bienvenidos a Finargy. Tu página favorita sobre finanzas del país...">
+    <meta name="keywords" content="finanzas, Argentina, economía">
+    <meta name="author" content="Schenvz, ARbiop">
+    <meta name="robots" content="index, follow">
+    <meta name="geo.region" content="AR">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="../css/estilos.css">
     <link rel="icon" href="../img/btc3.ico">
 </head>
-
 <body>
         <!-- Inicio del encabezado -->
         <header class="navbar">
             <!-- Logo -->
-            <img class="rounded-circle" src="../img/btc1.jpg" alt="logo_sitio" width="125" height="125">
+            <img class="rounded-circle" src="../img/btc3.ico" alt="logo_sitio" width="125" height="125">
             <!-- Fin del logo -->
-            <div class="sticky-top"><h1 class="d-inline p-2 bg-dark text-white">Finanzas 2GO</h1></div>
-
-            
-        <nav class="navbar sticky-top navbar-light bg-light">
+            <div class="sticky-top" id="#" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000"><h1 class="d-inline p-2 bg-dark text-white">Finanzas 2GO</h1></div>
+            <!-- Fin del título -->
+                <!-- Inicio navBar -->
+                <nav class="navbar sticky-top navbar-light bg-light">
                     <a class="navbar-brand" href="#">Menú</a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="bi bi-list-nested"></span>
-                    </button>
-                        
+                    </button>          
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">IR AL INICIO <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="../index.html">IR AL INICIO <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="crypto__final.html">Criptomonedas</a>
+                        <a class="nav-link" href="./html/crypto__final.html">Criptomonedas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="nft__final.html">NFT</a>
+                        <a class="nav-link" href="./html/nft__final.html">NFT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contacto__final.html">¡Contactanos!</a>
+                        <a class="nav-link" href="./html/contacto__final.html">¡Contactanos!</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portafolio__final.html">Ingresar a mi portafolio</a>
+                        <a class="nav-link" href="./html/portafolio__final.html">Ingresar a mi portafolio</a>
                     </li>
                 </ul>
             </div>
         </nav>
+        <!-- Final navBar -->
+    </header>
     </header>
 	<!-- Fin del encabezado -->
-
-    <a href="#" class="boton-top"><i class="fa-sharp fa-solid fa-arrow-up fa-bounce"></i>
-    </a>
-
-    <div class="container-xl border mt-auto">
+    <div class="container-xl border mt-auto" data-aos="zoom-out">
         <section>
-            <h2>Non Fungible Tokens</h2>
-            <article class="bg-light">
+            <h2 class="bg-warning text-center">Non Fungible Tokens</h2>
+            <article class="bg-light text-secondary">
                     <p>Los Tokens No Fungibles (NFT, por sus siglas en inglés) han revolucionado el mundo de las criptomonedas y el arte digital. Un NFT es un tipo de token único e indivisible que representa la propiedad de un activo digital específico. A diferencia de las criptomonedas tradicionales, los NFT no son intercambiables entre sí, ya que cada uno tiene un identificador único que lo distingue.
                     </p>
-                    <p>Los NFT han encontrado un amplio uso en el ámbito del arte, permitiendo a los artistas crear y vender obras digitales exclusivas. Esta tecnología ha abierto nuevas posibilidades para los creadores, ya que les permite monetizar su arte de forma directa y justa. Los compradores de NFT obtienen la propiedad única de la obra digital, lo que les brinda una experiencia de posesión y autenticidad inigualable.
+                    <p class="text-success">Los NFT han encontrado un amplio uso en el ámbito del arte, permitiendo a los artistas crear y vender obras digitales exclusivas. Esta tecnología ha abierto nuevas posibilidades para los creadores, ya que les permite monetizar su arte de forma directa y justa. Los compradores de NFT obtienen la propiedad única de la obra digital, lo que les brinda una experiencia de posesión y autenticidad inigualable.
                     </p>
                     <p>Sin embargo, los NFT no se limitan solo al arte. También se utilizan en áreas como la música, los videojuegos y el coleccionismo. Los músicos pueden lanzar álbumes o canciones en forma de NFT, lo que les permite establecer una conexión más cercana con sus fanáticos y proporcionarles contenido exclusivo. En los videojuegos, los NFT permiten a los jugadores poseer elementos únicos y escasos, mejorando la experiencia de juego y creando un mercado secundario para intercambiar activos digitales.
                     </p>
-                    <p>A pesar de su creciente popularidad, los NFT también han generado controversia. Algunos critican el alto consumo de energía asociado con las cadenas de bloques utilizadas para respaldar los NFT, mientras que otros se preocupan por la posibilidad de fraudes y falsificaciones. Estos desafíos plantean la necesidad de encontrar soluciones sostenibles y garantías de autenticidad en el espacio de los NFT.
+                    <p class="text-danger">A pesar de su creciente popularidad, los NFT también han generado controversia. Algunos critican el alto consumo de energía asociado con las cadenas de bloques utilizadas para respaldar los NFT, mientras que otros se preocupan por la posibilidad de fraudes y falsificaciones. Estos desafíos plantean la necesidad de encontrar soluciones sostenibles y garantías de autenticidad en el espacio de los NFT.
                     </p>
                     <p>A medida que la tecnología de los NFT evoluciona, es probable que veamos nuevas aplicaciones y oportunidades surgir. Los NFT tienen el potencial de cambiar la forma en que interactuamos con el arte y los activos digitales, al proporcionar una forma única de propiedad y autenticidad en el mundo digital. Aunque aún se encuentran en una etapa temprana, los NFT prometen un futuro emocionante y lleno de posibilidades para artistas, coleccionistas y entusiastas de la tecnología.
                     </p>
             </article>
         </section>
     </div>
+<!-- Inicio footer -->
+<div class="container">
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item">
+                <a href="../index.html" class="nav-link px-2 text-body-secondary">
+                    <button type="button" class="btn btn-outline-primary">Ir al inicio</button>
+                </a></li>
+            <li class="nav-item">
+                <a href="./contacto__final.html" class="nav-link px-2 text-body-secondary">
+                    <button type="button" class="btn btn-outline-primary">Contacto</button>
+                </a></li>
+            <li class="nav-item">
+                <a href="./portafolio__final.html" class="nav-link px-2 text-body-secondary">
+                    <button type="button" class="btn btn-outline-primary">Portafolio</button>
+                </a></li>
+            <li class="nav-item">
+                <a href="./crypto__final.html" class="nav-link px-2 text-body-secondary">
+                        <button type="button" class="btn btn-outline-primary">Criptomonedas</button>
+                </a></li>
+            <li class="nav-item">
+                <a href="./nft__final.html" class="nav-link px-2 text-body-secondary">
+                    <button type="button" class="btn btn-outline-primary">NFT</button>
+                </a></li>
+        </ul>
+        <p class="text-center text-body-secondary"> Finargy.com</p>
+        <p class="text-center text-body-secondary text-black-50"> 2023</p>
+    </footer>
+</div>
 
-    <div class="container">
-        <footer class="py-3 my-4">
-            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item">
-                    <a href="index.html" class="nav-link px-2 text-body-secondary">
-                        <button type="button" class="btn btn-outline-primary">Ir al inicio</button>
-                    </a></li>
-                <li class="nav-item">
-                    <a href="contacto__final.html" class="nav-link px-2 text-body-secondary">
-                        <button type="button" class="btn btn-outline-primary">Contacto</button>
-                    </a></li>
-                <li class="nav-item">
-                    <a href="portafolio__final.html" class="nav-link px-2 text-body-secondary">
-                        <button type="button" class="btn btn-outline-primary">Portafolio</button>
-                    </a></li>
-                <li class="nav-item">
-                    <a href="nft__final.html" class="nav-link px-2 text-body-secondary">
-                        <button type="button" class="btn btn-outline-primary">NFT</button>
-                    </a></li>
-            </ul>
+<script src="https://kit.fontawesome.com/kitcode.js" crossorigin="anonymous"> </script>
 
-            <p class="text-center text-body-secondary"> Finargy.com</p>
-            <p class="text-center text-body-secondary text-black-50"> 2023</p>
-            <!--<p>Visualizar el top 10 de criptomonedas del día de hoy:</p>
-            <iframe src="https://coin360.com/widget/top-10?utm_source=embed_map" frameborder="0" title="Coin360.com: Top 10 Coins" width="400" height="300"></iframe>-->
-        </footer>
-    </div>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
+<script> AOS.init();</script>
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2s/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 </body>
 </html>
